made responsive, new bg

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Exquisite Corpse</title>
+    <title>Texquisite Corpse</title>
   </head>
   <body>
     <header>
@@ -16,11 +16,11 @@
             >About this game</a
           ></span
         >
-        <a href="https://github.com/bodjaman/exquisite-corpse" target="_blank"
+        <a href="https://github.com/bodjaman/texquisite-corpse" target="_blank"
           ><img src="images/icon-github.png" class="icons"
         /></a>
       </div>
-      <h1>Exquisite Corpse</h1>
+      <h1>Texquisite Corpse</h1>
     </header>
 
     <section id="main">
